# chess-game

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  sdl2-image-config.cmake
.github/workflows/: lint.yml  tag-conflicts.yml
cmake/: compile_commands.json
src/: CMakeLists.txt  ChessLoop.cpp  ChessLoop.h  FEN.cpp  FEN.h  Main.cpp  SDL_Handler.cpp  SDL_Handler.h
